--- a/ffmpegVideoEditor/build.gradle
+++ b/ffmpegVideoEditor/build.gradle
@@ -23,8 +23,31 @@ android {
     }
 
     buildTypes {
-        release {
+        debug {
+            // 调试模式开关
+            debuggable true
+            jniDebuggable true
+            // 压缩对齐开关
+            zipAlignEnabled false
+            // 移除无用的资源
+            shrinkResources false
+            // 代码混淆开关
             minifyEnabled false
+
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        release {
+            // 调试模式开关
+            debuggable false
+            jniDebuggable false
+            // 压缩对齐开关
+            zipAlignEnabled true
+            // 移除无用的资源
+            shrinkResources false
+            // 代码混淆开关
+            minifyEnabled false
+
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -37,7 +60,7 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
-    
+
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
         exclude 'META-INF/DEPENDENCIES'
