--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,14 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdk 31
 
     defaultConfig {
         applicationId "me.longluo.filecut"
         minSdkVersion 24
         targetSdkVersion 31
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx...test.runner.AndroidJUnitRunner"
+        versionCode 2
+        versionName "1.1"
     }
 
     buildTypes {
@@ -27,8 +26,6 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
-
-    flavorDimensions "default"
 
     androidExtensions {
         experimental = true
