--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.7.0'
+    ext.kotlin_version = '1.7.20'
 
     repositories {
         maven { url 'https://maven.aliyun.com/repository/public/' }
@@ -10,13 +10,14 @@ buildscript {
         maven { url 'https://maven.aliyun.com/repository/spring-plugin/' }
         maven { url 'https://maven.aliyun.com/repository/grails-core/' }
         maven { url 'https://maven.aliyun.com/repository/apache-snapshots/' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath "com.android.tools.build:gradle:7.2.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0"
@@ -34,6 +35,7 @@ allprojects {
         maven { url 'https://maven.aliyun.com/repository/spring-plugin/' }
         maven { url 'https://maven.aliyun.com/repository/grails-core/' }
         maven { url 'https://maven.aliyun.com/repository/apache-snapshots/' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
